turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: value Black is not a member of object java.awt.Color
    setCouleurBrosse(Color.Black)
                           ^