turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol() == Color.white) {
    setCouleurBrosse(Color.Black)
    baisseBrosse()
    leveBrosse()
    droite()
    avance()
  }
    else {
    setCouleurBrosse(Color.white)
    baisseBrosse()
    leveBrosse()
    gauche()
    avance()
  }
}

def setCouleurSol(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}